codigo aplicando a entidade,e criei e testei un adicionar usuario

--- a/apictrgamer/apictrgamer.csproj
+++ b/apictrgamer/apictrgamer.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <None Remove="Ctrgamer.db" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ctrgamer\ctrgamer.csproj" />
   </ItemGroup>
 
 </Project>
