consertei um dos erros que estava dando ontem mais tem que consertar o resto  comsertei so o do usuario carrinho mais falta fazer isso nos outros

--- a/apictrgamer/appsettings.json
+++ b/apictrgamer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Ctrgame.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
