--- a/apictrgamer/apictrgamer.csproj
+++ b/apictrgamer/apictrgamer.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
