07/11/2024 Erro na hora de listar o carrinho do usuario
o codigo esta com erro pois       o venda não lista o carrinho desejado

--- a/apictrgamer/apictrgamer.csproj
+++ b/apictrgamer/apictrgamer.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>\\server\ALUNOS DEV\victor.costa\2 semestre log ling\trabalho\ctrgamer\apictrgamer\MinhaAPI.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
